[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/controls_tab/desktop/keybind.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/controls_tab/desktop/desktop_controls_tab.gd" type="Script" id=4]
[ext_resource path="res://ui/gui/button/medium/button_medium.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("button_medium/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "key_label_flash"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("button_medium/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="desktop_controls_tab" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 4 )

[node name="list" type="VBoxContainer" parent="."]
margin_left = 42.0
margin_right = 197.0
margin_bottom = 135.0

[node name="controls_up" type="HBoxContainer" parent="list"]
margin_right = 155.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_constants/separation = 0
script = ExtResource( 3 )
assigned_action = "controls_up"

[node name="Label" type="Label" parent="list/controls_up"]
margin_top = 5.0
margin_right = 109.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "ui.settings.controls_up"

[node name="MarginContainer" type="MarginContainer" parent="list/controls_up"]
margin_left = 109.0
margin_right = 125.0
margin_bottom = 20.0
custom_constants/margin_right = 16

[node name="button_medium" parent="list/controls_up" instance=ExtResource( 6 )]
margin_left = 125.0
margin_right = 155.0

[node name="Label" parent="list/controls_up/button_medium" index="0"]
text = "_"

[node name="AnimationPlayer" type="AnimationPlayer" parent="list/controls_up"]
anims/RESET = SubResource( 1 )
anims/key_label_flash = SubResource( 2 )

[connection signal="request_key_assignment" from="list/controls_up" to="." method="_on_controls_up_request_key_assignment"]
[connection signal="button_pressed" from="list/controls_up/button_medium" to="list/controls_up" method="_on_button_medium_button_pressed"]

[editable path="list/controls_up/button_medium"]
